css/style.css
body,
html {
  padding: 0;
  font-weight:200;
}



li{
  font-weight: 100;
  line-height: 1.5rem;
  margin: 0
}

body,
html,
li,
ul {
  margin: 0;
  list-style-image: url(data:image/svg+xml;utf8,%0A%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2012%2012%22%3E%3Cpath%20d%3D%22M7%202l4%204-4%204-1.5-1.5L8%206%205.5%203.5%207%202z%22%20fill%3D%22%23920%22/%3E%3Cpath%20fill%3D%22%23320%22%20d%3D%22M7%206L4%203%201%206l3%203z%22/%3E%3C/svg%3E);
}

.h-half_width_container>*,
.pgNav li {
  float: left;
  min-width: 50%;
  max-width: 100%
}

* {
  box-sizing: border-box;
  font-size: 1em
}

html {
  font-size: 1.25em;
  font-size: calc( 1em + .625vw );
}

body {
  background: #fee;
  font-size: inherit
}

.hdr,
.orange-bg {
  background-color: #d40
}

@media print{
  .hdr.hdr{
    box-shadow: none;
    padding: 0 5%;
  }
}

.hdr[style*='background-image:']{
  background-size: 100% auto;
  background-size: cover;
  color:#fee;
}

.hdr[style*='background-image:'] .h1{
  color:inherit;
}

h1,.h1,
h2,.h2,
h3,.h3,
h4,.h4,
h5,.h5,
h6,.h6{
  color: #320;
  font-family: georgia, serif;
  font-weight: 100;
  margin: 0;
  }

h1,.h1{
  font-size: 2.67em;
  line-height: 1.1214953271;
  margin-bottom: 0.56074766355em;
  }

h2,.h2{
  font-size: 2.5em;
  line-height: 1.2;
  margin-bottom: .6em;
  }

h3,.h3{
  font-size: 1.3375em;
  line-height: 1.1214953271;
  margin-bottom: 1.1214953271em;
  }

h4,.h4{
  font-size: 1.28em;
  line-height: 1.171875;
  margin-bottom: 1.171875em;
  }

h5,.h5{
  font-size: 1.25em;
  line-height: 1.2;
  margin-bottom: 1.2em;
  }

h6,.h6{
  font-size: 1.171875em;
  line-height: 1.28;
  margin-bottom: 1.28em;
  }

p {
  font-family: helvetica, 'Segoe UI Light', sans-serif, sans, droid-sans;
  font-size: 1em;
  line-height:1.5;
  margin-bottom: 1.5em;
  }

a {
  color: #320;
  text-decoration: none;
  border-bottom: 1px solid #920;
  border-bottom: .1rem solid #920;
  transition: .25s opacity, .25s transform;
  }

a:hover,
a:focus{
  opacity: .5;
  transform: translateY(-.09375rem);
  }

ul{
  list-style-type: square;
  padding: 0 0 0 1.6em;
  }

.h-half_width_container {
  display: inline-block;
  width: 100%
  }

.h-half_width_container>* {
  width: 12em
}

li {
  color: #320;
  font-family: helvetica, arial, sans-serif, sans, droid-sans;
  padding: 0
}

.columns {
  columns: 15em
  }

.pgNav__h {
  font-size: 1em;
  display: block;
  width: 100%;
  line-height: 1.5rem;
  margin-bottom: 0;
  padding: 0
}

.pgNav,
.pgNav li {
  margin: 1.5em 0 0
  }

.pgNav {
  vertical-align: top;
  display: inline-block;
  padding: 0 5%;
  list-style: none;
  width: 100%
  }

.pgNav a {
  font-size: 1em;
  line-height: 1.5em;
  font-family: georgia, serif
}

.pgNav li {
  display: block;
  font-size: 1em;
  line-height: 1.5em;
  width: 7.5em
  }

.hdr,
.mdl {
  width: 100%
  }

@media screen and (min-width:65em) {
  .pgNav {
    transform: translate3d(0, 0, 0);
    position: fixed;
    left: 38em;
    bottom: 1.5em;
    list-style-type: square;
    z-index: 1
  }
  .pgNav li {
    width: 100%
  }
}

.art,
.hdr,
.navigation {
  position: relative;
  z-index: 2
}

.mdl__cntr {
  margin: 0 0 3em;
  padding: 0;
}

.mdl {
  display: inline-block;
  margin: 0 0 1.5em
}

.mdl--borderd {
  padding: 0 0 0 1.45em;
  border-left: .25em solid #320;
  box-shadow: inset .2em 0 #fee, inset .3em 0 #920;
}

@media screen and (max-width:32em) {
  .mdl--borderd {
    padding: 0;
    border-left: 0;
    box-shadow: none;
  }
  .mdl--borderd+.mdl--borderd {
    border-top: .25em solid #320;
    box-shadow: inset 0 .2em #fee, inset 0 .3em #920;
    padding-top: 1.45em
  }
}

.mdl__h4 {
  padding: 0;
  margin: .75rem 0;
}

.mdl__bdy {
  font-size: 1em;
  line-height: 1.5em;
  margin: 0;
  padding: 0;
}

.mdl__dtl {
  display: block;
  font-size: .75em;
  line-height: 2;
  margin: 0;
  padding: 0;
  font-weight: 800
}

.mdl>a,
a.logo {
  font-size: 1em
}

.mdl>a {
  line-height: 1.5em;
  margin: 0 0 .75em;
  display: inline-block
}

.max--readable {
  width: 100%;
  max-width: 38em
}

.max--short {
  max-width: 20em
}

.hdr {
  overflow: hidden;
  padding: 3em 0 1.5em
}

.hdr__nv {
  padding: 0 5%
}

a.logo,
a.menu_link {
  color: #fee;
  display: inline-block;
  padding: 1.125rem 0 .325rem;
  font-family: georgia, serif;
  font-weight: 100;
  text-decoration: none;
  border-bottom: .25rem solid #320;
  box-shadow: 0 .2rem #d40, 0 .3rem #920;
}

.hdr[style*="background-image:"] a.logo,
.hdr[style*="background-image:"] a.menu_link {
  box-shadow: none;
  border-bottom: .25rem solid #920;
}

a.logo {
  font-size:1em;
  line-height: 1.5em;
  letter-spacing: .05em;
  margin-right: 5%;
  width: 75%
}

a.menu_link {
  font-size: .9375em;
  line-height: 1.6em;
  min-width: 20%;
  text-align: right;
  vertical-align: bottom
}

.hdr h1 {
  clear: both;
  color: #320;
  display: block;
  width: 100%;
  padding-top: 1.5rem
}

.art {
  color: #320;
  padding: 1.5em 5% 4.5em;
}

@media print{
  .art.art{ padding: 0 5%; }
}

@media screen and (min-width:38em){
  .art p{
    text-align: justify;
  }
}

.navigation {
/*   columns: 19em; */
  padding: 3em 5%;
  width: 100%
}

.navigation a {
  color: #fee;
  font-family: georgia, serif;
  font-weight: 100;
}

a.printContact {
  display: none
}

.pagebreak {
  page-break-before: always
}

@media print {
  html body *{
    border:none !important;
    box-shadow:none !important;
    font-size:14px;
    }

  .navigation,
  .pgNav,
  a.menu_link {
    display: none
  }
  a:after {
    content: "\A"attr(href);
    white-space: pre;
    font-size: 14px;
    line-height: 1;
    border-bottom: none;
    display: block;
    padding: 0;
    margin: 0
  }
  .printContact:after,
  a.logo:after,
  a.printContact:after {
    display: none
  }
  a.printContact {
    display: block;
    border-bottom: none
  }
  a.logo {
    color: #320
  }
}

